Adjust for changes in histore 0.4.0

--- a/examples/notebooks/Country Names.ipynb
+++ b/examples/notebooks/Country Names.ipynb
@@ -44,16 +44,6 @@
       "3         Algeria         DZ        DZA    Algiers   Africa  Northern Africa\n",
       "4  American Samoa         AS        ASM  Pago Pago  Oceania        Polynesia\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Snapshot (version=0 description='' at=2021-02-26 11:06:39.568311-05:00)>"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -61,7 +51,7 @@
     "\n",
     "from openclean.data.refdata import RefStore\n",
     "\n",
-    "import openclean.data.archive as masterdata\n",
+    "import openclean.data.archive.base as masterdata\n",
     "\n",
     "refstore = RefStore(basedir=datadir)\n",
     "refstore.download('restcountries.eu')\n",
@@ -69,8 +59,7 @@
     "\n",
     "print(countries.head())\n",
     "\n",
-    "archive = masterdata.create('restcountries', primary_key=['alpha3Code'], replace=True)\n",
-    "archive.commit(countries)"
+    "archive = masterdata.create('restcountries', source=countries, primary_key=['alpha3Code'], replace=True)"
    ]
   },
   {
