--- a/examples/notebooks/city-names/DOB Job Application Filings - Anomaly Detection.ipynb
+++ b/examples/notebooks/city-names/DOB Job Application Filings - Anomaly Detection.ipynb
@@ -36,7 +36,7 @@
     "\n",
     "from openclean.pipeline import stream\n",
     "\n",
-    "df = stream(datafile).select('City ').update('City ', str.upper).sample(10000, seed=42).to_df()"
+    "df = stream(datafile).select('City ').update('City ', str.upper).sample(10000, random_state=42).to_df()"
    ]
   },
   {
@@ -47,17 +47,17 @@
     {
      "data": {
       "text/plain": [
-       "NEW YORK        3680\n",
-       "BROOKLYN        1594\n",
-       "QUEENS           538\n",
-       "BRONX            470\n",
-       "NY               462\n",
-       "                ... \n",
-       "FAR ROCKAWY        1\n",
-       "OLD BRIDGE         1\n",
-       "MARLTON            1\n",
-       "WILLIAMSBURG       1\n",
-       "NANUET             1\n",
+       "NEW YORK           3680\n",
+       "BROOKLYN           1594\n",
+       "QUEENS              538\n",
+       "BRONX               470\n",
+       "NY                  462\n",
+       "                   ... \n",
+       "BROOKLLYN             1\n",
+       "CAMBRIA HEIGHTS       1\n",
+       "STUART                1\n",
+       "BRONXVILLE            1\n",
+       "BROOKLYM              1\n",
        "Name: City , Length: 513, dtype: int64"
       ]
      },
@@ -119,50 +119,53 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4\tLIC.\n",
+      "4\tL.I.C.\n",
+      "\tSI,NY\n",
       "\tN Y\n",
-      "\tB'KLYN\n",
-      "\t_BK\n",
-      "\tQUEEN S\n",
-      "\tL.I.CITY\n",
-      "\tSUITE 2107 NY\n",
-      "\tNEW CANAAN\n",
-      "\tHOLLIS HILLS\n",
-      "\tS.I.\n",
-      "\tMIAMI\n",
-      "\tL.I.C\n",
-      "\tFLUSHING MEADOW\n",
+      "\tN.Y.\n",
       "\tNEW  YORK\n",
       "\tS.I.,NY\n",
+      "\tL.I.CITY\n",
+      "\t_BK\n",
+      "\tS.I.\n",
+      "\tSUITE 2107 NY\n",
+      "\tL.I.C\n",
+      "\tMIAMI\n",
+      "\tLIC.\n",
       "\tBKLYN.\n",
-      "\tL.I.C.\n",
-      "\tN.Y.\n",
-      "\tSI,NY\n",
+      "\tB'KLYN\n",
+      "\tQUEEN S\n",
       "\n",
-      "3\tROCKVILLE_CENTR\n",
-      "\tS.OZONE PARK\n",
-      "\tJACKSON HTS.\n",
-      "\tS. OZONE PARK\n",
-      "\tBOONTON\n",
-      "\tMT. KISCO\n",
-      "\tATLANTA\n",
-      "\tNEW YORK,\n",
-      "\tMANHATTAN\n",
-      "\tMINEOLA,\n",
-      "\tNEW YORK  CITY\n",
-      "\tBROOKLYN,\n",
-      "\tFLUS. MEADOWS\n",
-      "\tPHILADELPHIA\n",
-      "\tCINCINNATI\n",
-      "\tLONG ISL. CITY\n",
+      "3\tLONG ISLN. CITY\n",
       "\tNEW  YOURK\n",
-      "\tLONG ISLN. CITY\n",
-      "\tMC LEAN\n",
+      "\tS.OZONE PARK\n",
       "\tRICHMOND-HILL\n",
-      "\tMT.VERNON\n",
       "\tNEW YORK\\\n",
+      "\tS. RICHMOND HIL\n",
+      "\tHOLLIS HILLS\n",
+      "\tNEW CANAAN\n",
+      "\tLONG ISL.CITY\n",
+      "\tNEW YORK,\n",
+      "\tROCKVILLE_CENTR\n",
+      "\tMINEOLA,\n",
+      "\tN.MIAMI BEACH\n",
+      "\tQUEENS _VILLAGE\n",
+      "\tFLUS. MEADOWS\n",
+      "\tSO. PLAINFIELD\n",
+      "\tMC LEAN\n",
+      "\tS. OZONE PARK\n",
+      "\tLONG ISL. CITY\n",
+      "\tS. PLAINFIELD\n",
+      "\tFLUSHING MEADOW\n",
+      "\tJACKSON HTS.\n",
+      "\tST. PETERSBURG\n",
+      "\tBROOKLYN,\n",
+      "\tNEW YORK  CITY\n",
+      "\tNEW YORK, NY\n",
+      "\tPHILADELPHIA\n",
+      "\tMT.VERNON\n",
       "\tSO. OZONE PARK\n",
-      "\tNEW YORK, NY\n"
+      "\tMT. KISCO\n"
      ]
     }
    ],
@@ -200,15 +203,15 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.1"
   },
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
-    "source": [],
     "metadata": {
      "collapsed": false
-    }
+    },
+    "source": []
    }
   }
  },
