--- a/examples/notebooks/engine/Openclean Engine - Register User-Defined Function.ipynb
+++ b/examples/notebooks/engine/Openclean Engine - Register User-Defined Function.ipynb
@@ -47,17 +47,13 @@
       "text/plain": [
        "[{'name': 'add_number',\n",
        "  'namespace': None,\n",
-       "  'description': Type help() for interactive help, or help(object) for help about object.,\n",
        "  'columns': 1,\n",
+       "  'columnLabels': ['value'],\n",
        "  'outputs': 1,\n",
        "  'parameters': [{'dtype': 'int',\n",
        "    'name': 'n',\n",
        "    'index': 0,\n",
-       "    'label': None,\n",
-       "    'help': None,\n",
-       "    'defaultValue': None,\n",
-       "    'isRequired': False,\n",
-       "    'group': None}]}]"
+       "    'isRequired': False}]}]"
       ]
      },
      "execution_count": 3,
