--- a/examples/notebooks/nyc-restaurant-inspections/NYC Restaurant Inspections - Profiling.ipynb
+++ b/examples/notebooks/nyc-restaurant-inspections/NYC Restaurant Inspections - Profiling.ipynb
@@ -496,12 +496,14 @@
        "[{'column': 'CAMIS',\n",
        "  'stats': {'totalValueCount': 392131,\n",
        "   'emptyValueCount': 0,\n",
-       "   'datatypes': Counter({'int': 392131}),\n",
+       "   'datatypes': defaultdict(collections.Counter,\n",
+       "               {'total': Counter({'int': 392131})}),\n",
        "   'minmaxValues': {'int': {'minimum': 30075445, 'maximum': 50099136}}}},\n",
        " {'column': 'DBA',\n",
        "  'stats': {'totalValueCount': 392131,\n",
        "   'emptyValueCount': 588,\n",
-       "   'datatypes': Counter({'str': 391478, 'int': 55, 'date': 10}),\n",
+       "   'datatypes': defaultdict(collections.Counter,\n",
+       "               {'total': Counter({'str': 391478, 'int': 55, 'date': 10})}),\n",
        "   'minmaxValues': {'str': {'minimum': '#1 Chinese Restaurant',\n",
        "     'maximum': 'zx accounting service llc'},\n",
        "    'int': {'minimum': 33, 'maximum': 1976},\n",
@@ -510,13 +512,15 @@
        " {'column': 'BORO',\n",
        "  'stats': {'totalValueCount': 392131,\n",
        "   'emptyValueCount': 0,\n",
-       "   'datatypes': Counter({'str': 392015, 'int': 116}),\n",
+       "   'datatypes': defaultdict(collections.Counter,\n",
+       "               {'total': Counter({'str': 392015, 'int': 116})}),\n",
        "   'minmaxValues': {'str': {'minimum': 'Bronx', 'maximum': 'Staten Island'},\n",
        "    'int': {'minimum': 0, 'maximum': 0}}}},\n",
        " {'column': 'BUILDING',\n",
        "  'stats': {'totalValueCount': 392131,\n",
        "   'emptyValueCount': 231,\n",
-       "   'datatypes': Counter({'int': 381625, 'str': 10095, 'date': 180}),\n",
+       "   'datatypes': defaultdict(collections.Counter,\n",
+       "               {'total': Counter({'int': 381625, 'str': 10095, 'date': 180})}),\n",
        "   'minmaxValues': {'int': {'minimum': 0, 'maximum': 65626564},\n",
        "    'str': {'minimum': '.1-A', 'maximum': 'W105'},\n",
        "    'date': {'minimum': datetime.datetime(120, 1, 2, 0, 0),\n",
@@ -524,127 +528,149 @@
        " {'column': 'STREET',\n",
        "  'stats': {'totalValueCount': 392131,\n",
        "   'emptyValueCount': 0,\n",
-       "   'datatypes': Counter({'str': 392131}),\n",
+       "   'datatypes': defaultdict(collections.Counter,\n",
+       "               {'total': Counter({'str': 392131})}),\n",
        "   'minmaxValues': {'str': {'minimum': '& GRAND CENTRAL',\n",
        "     'maximum': 'west 34th st'}}}},\n",
        " {'column': 'ZIPCODE',\n",
        "  'stats': {'totalValueCount': 392131,\n",
        "   'emptyValueCount': 5557,\n",
-       "   'datatypes': Counter({'int': 386558, 'str': 16}),\n",
+       "   'datatypes': defaultdict(collections.Counter,\n",
+       "               {'total': Counter({'int': 386558, 'str': 16})}),\n",
        "   'minmaxValues': {'int': {'minimum': 10000, 'maximum': 12345},\n",
        "    'str': {'minimum': 'N/A', 'maximum': 'N/A'}}}},\n",
        " {'column': 'PHONE',\n",
        "  'stats': {'totalValueCount': 392131,\n",
        "   'emptyValueCount': 11,\n",
-       "   'datatypes': Counter({'int': 391725, 'str': 395}),\n",
+       "   'datatypes': defaultdict(collections.Counter,\n",
+       "               {'total': Counter({'int': 391725, 'str': 395})}),\n",
        "   'minmaxValues': {'int': {'minimum': 0, 'maximum': 90172017170},\n",
        "    'str': {'minimum': '212690369_', 'maximum': '__________'}}}},\n",
        " {'column': 'CUISINE DESCRIPTION',\n",
        "  'stats': {'totalValueCount': 392131,\n",
        "   'emptyValueCount': 0,\n",
-       "   'datatypes': Counter({'str': 392131}),\n",
+       "   'datatypes': defaultdict(collections.Counter,\n",
+       "               {'total': Counter({'str': 392131})}),\n",
        "   'minmaxValues': {'str': {'minimum': 'Afghan',\n",
        "     'maximum': 'Vietnamese/Cambodian/Malaysia'}}}},\n",
        " {'column': 'INSPECTION DATE',\n",
        "  'stats': {'totalValueCount': 392131,\n",
        "   'emptyValueCount': 0,\n",
-       "   'datatypes': Counter({'date': 392131}),\n",
+       "   'datatypes': defaultdict(collections.Counter,\n",
+       "               {'total': Counter({'date': 392131})}),\n",
        "   'minmaxValues': {'date': {'minimum': datetime.datetime(1900, 1, 1, 0, 0),\n",
        "     'maximum': datetime.datetime(2019, 9, 27, 0, 0)}}}},\n",
        " {'column': 'ACTION',\n",
        "  'stats': {'totalValueCount': 392131,\n",
        "   'emptyValueCount': 1337,\n",
-       "   'datatypes': Counter({'str': 390794}),\n",
+       "   'datatypes': defaultdict(collections.Counter,\n",
+       "               {'total': Counter({'str': 390794})}),\n",
        "   'minmaxValues': {'str': {'minimum': 'Establishment Closed by DOHMH.  Violations were cited in the following area(s) and those requiring immediate action were addressed.',\n",
        "     'maximum': 'Violations were cited in the following area(s).'}}}},\n",
        " {'column': 'VIOLATION CODE',\n",
        "  'stats': {'totalValueCount': 392131,\n",
        "   'emptyValueCount': 5696,\n",
-       "   'datatypes': Counter({'str': 386272, 'float': 163}),\n",
+       "   'datatypes': defaultdict(collections.Counter,\n",
+       "               {'total': Counter({'str': 386272, 'float': 163})}),\n",
        "   'minmaxValues': {'str': {'minimum': '02A', 'maximum': '22G'},\n",
        "    'float': {'minimum': 1500.0, 'maximum': 15000.0}}}},\n",
        " {'column': 'VIOLATION DESCRIPTION',\n",
        "  'stats': {'totalValueCount': 392131,\n",
        "   'emptyValueCount': 8918,\n",
-       "   'datatypes': Counter({'str': 383213}),\n",
+       "   'datatypes': defaultdict(collections.Counter,\n",
+       "               {'total': Counter({'str': 383213})}),\n",
        "   'minmaxValues': {'str': {'minimum': '\"\"No Smoking” and/or \\'Smoking Permitted” sign not conspicuously posted. Health warning not present on \\'Smoking Permitted”',\n",
        "     'maximum': '“Choking first aid” poster not posted. “Alcohol and pregnancy” warning sign not posted. Resuscitation equipment: exhaled air resuscitation masks (adult & pediatric), latex gloves, sign not posted. Inspection report sign not posted.'}}}},\n",
        " {'column': 'CRITICAL FLAG',\n",
        "  'stats': {'totalValueCount': 392131,\n",
        "   'emptyValueCount': 8918,\n",
-       "   'datatypes': Counter({'str': 383213}),\n",
+       "   'datatypes': defaultdict(collections.Counter,\n",
+       "               {'total': Counter({'str': 383213})}),\n",
        "   'minmaxValues': {'str': {'minimum': 'N', 'maximum': 'Y'}}}},\n",
        " {'column': 'SCORE',\n",
        "  'stats': {'totalValueCount': 392131,\n",
        "   'emptyValueCount': 17046,\n",
-       "   'datatypes': Counter({'int': 375085}),\n",
+       "   'datatypes': defaultdict(collections.Counter,\n",
+       "               {'total': Counter({'int': 375085})}),\n",
        "   'minmaxValues': {'int': {'minimum': -1, 'maximum': 164}}}},\n",
        " {'column': 'GRADE',\n",
        "  'stats': {'totalValueCount': 392131,\n",
        "   'emptyValueCount': 193610,\n",
-       "   'datatypes': Counter({'str': 198521}),\n",
+       "   'datatypes': defaultdict(collections.Counter,\n",
+       "               {'total': Counter({'str': 198521})}),\n",
        "   'minmaxValues': {'str': {'minimum': 'A', 'maximum': 'Z'}}}},\n",
        " {'column': 'GRADE DATE',\n",
        "  'stats': {'totalValueCount': 392131,\n",
        "   'emptyValueCount': 195416,\n",
-       "   'datatypes': Counter({'date': 196715}),\n",
+       "   'datatypes': defaultdict(collections.Counter,\n",
+       "               {'total': Counter({'date': 196715})}),\n",
        "   'minmaxValues': {'date': {'minimum': datetime.datetime(2013, 6, 7, 0, 0),\n",
        "     'maximum': datetime.datetime(2019, 9, 26, 0, 0)}}}},\n",
        " {'column': 'RECORD DATE',\n",
        "  'stats': {'totalValueCount': 392131,\n",
        "   'emptyValueCount': 0,\n",
-       "   'datatypes': Counter({'date': 392131}),\n",
+       "   'datatypes': defaultdict(collections.Counter,\n",
+       "               {'total': Counter({'date': 392131})}),\n",
        "   'minmaxValues': {'date': {'minimum': datetime.datetime(2019, 9, 28, 0, 0),\n",
        "     'maximum': datetime.datetime(2019, 9, 28, 0, 0)}}}},\n",
        " {'column': 'INSPECTION TYPE',\n",
        "  'stats': {'totalValueCount': 392131,\n",
        "   'emptyValueCount': 1337,\n",
-       "   'datatypes': Counter({'str': 390794}),\n",
+       "   'datatypes': defaultdict(collections.Counter,\n",
+       "               {'total': Counter({'str': 390794})}),\n",
        "   'minmaxValues': {'str': {'minimum': 'Administrative Miscellaneous / Compliance Inspection',\n",
        "     'maximum': 'Trans Fat / Second Compliance Inspection'}}}},\n",
        " {'column': 'Latitude',\n",
        "  'stats': {'totalValueCount': 392131,\n",
        "   'emptyValueCount': 430,\n",
-       "   'datatypes': Counter({'float': 386144, 'int': 5557}),\n",
+       "   'datatypes': defaultdict(collections.Counter,\n",
+       "               {'total': Counter({'float': 386144, 'int': 5557})}),\n",
        "   'minmaxValues': {'float': {'minimum': 40.508068517904,\n",
        "     'maximum': 40.912822326386},\n",
        "    'int': {'minimum': 0, 'maximum': 0}}}},\n",
        " {'column': 'Longitude',\n",
        "  'stats': {'totalValueCount': 392131,\n",
        "   'emptyValueCount': 430,\n",
-       "   'datatypes': Counter({'float': 386144, 'int': 5557}),\n",
+       "   'datatypes': defaultdict(collections.Counter,\n",
+       "               {'total': Counter({'float': 386144, 'int': 5557})}),\n",
        "   'minmaxValues': {'float': {'minimum': -74.248434473464,\n",
        "     'maximum': -73.700928057808},\n",
        "    'int': {'minimum': 0, 'maximum': 0}}}},\n",
        " {'column': 'Community Board',\n",
        "  'stats': {'totalValueCount': 392131,\n",
        "   'emptyValueCount': 5987,\n",
-       "   'datatypes': Counter({'int': 386144}),\n",
+       "   'datatypes': defaultdict(collections.Counter,\n",
+       "               {'total': Counter({'int': 386144})}),\n",
        "   'minmaxValues': {'int': {'minimum': 101, 'maximum': 595}}}},\n",
        " {'column': 'Council District',\n",
        "  'stats': {'totalValueCount': 392131,\n",
        "   'emptyValueCount': 5987,\n",
-       "   'datatypes': Counter({'int': 386144}),\n",
+       "   'datatypes': defaultdict(collections.Counter,\n",
+       "               {'total': Counter({'int': 386144})}),\n",
        "   'minmaxValues': {'int': {'minimum': 1, 'maximum': 51}}}},\n",
        " {'column': 'Census Tract',\n",
        "  'stats': {'totalValueCount': 392131,\n",
        "   'emptyValueCount': 5987,\n",
-       "   'datatypes': Counter({'int': 386144}),\n",
+       "   'datatypes': defaultdict(collections.Counter,\n",
+       "               {'total': Counter({'int': 386144})}),\n",
        "   'minmaxValues': {'int': {'minimum': 100, 'maximum': 162100}}}},\n",
        " {'column': 'BIN',\n",
        "  'stats': {'totalValueCount': 392131,\n",
        "   'emptyValueCount': 7670,\n",
-       "   'datatypes': Counter({'int': 384461}),\n",
+       "   'datatypes': defaultdict(collections.Counter,\n",
+       "               {'total': Counter({'int': 384461})}),\n",
        "   'minmaxValues': {'int': {'minimum': 1000000, 'maximum': 5799501}}}},\n",
        " {'column': 'BBL',\n",
        "  'stats': {'totalValueCount': 392131,\n",
        "   'emptyValueCount': 430,\n",
-       "   'datatypes': Counter({'int': 391701}),\n",
+       "   'datatypes': defaultdict(collections.Counter,\n",
+       "               {'total': Counter({'int': 391701})}),\n",
        "   'minmaxValues': {'int': {'minimum': 1, 'maximum': 5270000501}}}},\n",
        " {'column': 'NTA',\n",
        "  'stats': {'totalValueCount': 392131,\n",
        "   'emptyValueCount': 5987,\n",
-       "   'datatypes': Counter({'str': 386144}),\n",
+       "   'datatypes': defaultdict(collections.Counter,\n",
+       "               {'total': Counter({'str': 386144})}),\n",
        "   'minmaxValues': {'str': {'minimum': 'BK09', 'maximum': 'SI54'}}}}]"
       ]
      },
