--- a/examples/notebooks/parking-violations/Parking Violations - Functional Dependencies.ipynb
+++ b/examples/notebooks/parking-violations/Parking Violations - Functional Dependencies.ipynb
@@ -34,7 +34,7 @@
     "        print(ds.description)\n",
     "        ds.write(f)\n",
     "\n",
-    "\n",
+    "        \n",
     "# As an alternative, you can also use the smaller dataset sample that is\n",
     "# included in the repository.\n",
     "#\n",
@@ -128,229 +128,269 @@
        "[{'column': 'Summons Number',\n",
        "  'stats': {'totalValueCount': 1000,\n",
        "   'emptyValueCount': 0,\n",
-       "   'datatypes': Counter({'int': 1000}),\n",
+       "   'datatypes': defaultdict(collections.Counter,\n",
+       "               {'total': Counter({'int': 1000})}),\n",
        "   'minmaxValues': {'int': {'minimum': 1286655493, 'maximum': 8004852361}}}},\n",
        " {'column': 'Plate ID',\n",
        "  'stats': {'totalValueCount': 1000,\n",
        "   'emptyValueCount': 0,\n",
-       "   'datatypes': Counter({'str': 982, 'int': 18}),\n",
+       "   'datatypes': defaultdict(collections.Counter,\n",
+       "               {'total': Counter({'str': 982, 'int': 18})}),\n",
        "   'minmaxValues': {'str': {'minimum': '019KWM', 'maximum': 'ZFF73E'},\n",
        "    'int': {'minimum': 22, 'maximum': 8184138}}}},\n",
        " {'column': 'Registration State',\n",
        "  'stats': {'totalValueCount': 1000,\n",
        "   'emptyValueCount': 0,\n",
-       "   'datatypes': Counter({'str': 998, 'int': 2}),\n",
+       "   'datatypes': defaultdict(collections.Counter,\n",
+       "               {'total': Counter({'str': 998, 'int': 2})}),\n",
        "   'minmaxValues': {'str': {'minimum': 'AZ', 'maximum': 'VT'},\n",
        "    'int': {'minimum': 99, 'maximum': 99}}}},\n",
        " {'column': 'Plate Type',\n",
        "  'stats': {'totalValueCount': 1000,\n",
        "   'emptyValueCount': 0,\n",
-       "   'datatypes': Counter({'str': 994, 'int': 6}),\n",
+       "   'datatypes': defaultdict(collections.Counter,\n",
+       "               {'total': Counter({'str': 994, 'int': 6})}),\n",
        "   'minmaxValues': {'str': {'minimum': 'APP', 'maximum': 'TRC'},\n",
        "    'int': {'minimum': 999, 'maximum': 999}}}},\n",
        " {'column': 'Issue Date',\n",
        "  'stats': {'totalValueCount': 1000,\n",
        "   'emptyValueCount': 0,\n",
-       "   'datatypes': Counter({'date': 1000}),\n",
+       "   'datatypes': defaultdict(collections.Counter,\n",
+       "               {'total': Counter({'date': 1000})}),\n",
        "   'minmaxValues': {'date': {'minimum': datetime.datetime(2012, 12, 10, 0, 0),\n",
        "     'maximum': datetime.datetime(2014, 6, 25, 0, 0)}}}},\n",
        " {'column': 'Violation Code',\n",
        "  'stats': {'totalValueCount': 1000,\n",
        "   'emptyValueCount': 0,\n",
-       "   'datatypes': Counter({'int': 1000}),\n",
+       "   'datatypes': defaultdict(collections.Counter,\n",
+       "               {'total': Counter({'int': 1000})}),\n",
        "   'minmaxValues': {'int': {'minimum': 5, 'maximum': 99}}}},\n",
        " {'column': 'Vehicle Body Type',\n",
        "  'stats': {'totalValueCount': 1000,\n",
        "   'emptyValueCount': 7,\n",
-       "   'datatypes': Counter({'str': 993}),\n",
+       "   'datatypes': defaultdict(collections.Counter,\n",
+       "               {'total': Counter({'str': 993})}),\n",
        "   'minmaxValues': {'str': {'minimum': '2 DR', 'maximum': 'VAN'}}}},\n",
        " {'column': 'Vehicle Make',\n",
        "  'stats': {'totalValueCount': 1000,\n",
        "   'emptyValueCount': 9,\n",
-       "   'datatypes': Counter({'str': 991}),\n",
+       "   'datatypes': defaultdict(collections.Counter,\n",
+       "               {'total': Counter({'str': 991})}),\n",
        "   'minmaxValues': {'str': {'minimum': 'ACURA', 'maximum': 'WORKH'}}}},\n",
        " {'column': 'Issuing Agency',\n",
        "  'stats': {'totalValueCount': 1000,\n",
        "   'emptyValueCount': 0,\n",
-       "   'datatypes': Counter({'str': 1000}),\n",
+       "   'datatypes': defaultdict(collections.Counter,\n",
+       "               {'total': Counter({'str': 1000})}),\n",
        "   'minmaxValues': {'str': {'minimum': 'P', 'maximum': 'X'}}}},\n",
        " {'column': 'Street Code1',\n",
        "  'stats': {'totalValueCount': 1000,\n",
        "   'emptyValueCount': 0,\n",
-       "   'datatypes': Counter({'int': 1000}),\n",
+       "   'datatypes': defaultdict(collections.Counter,\n",
+       "               {'total': Counter({'int': 1000})}),\n",
        "   'minmaxValues': {'int': {'minimum': 0, 'maximum': 95030}}}},\n",
        " {'column': 'Street Code2',\n",
        "  'stats': {'totalValueCount': 1000,\n",
        "   'emptyValueCount': 0,\n",
-       "   'datatypes': Counter({'int': 1000}),\n",
+       "   'datatypes': defaultdict(collections.Counter,\n",
+       "               {'total': Counter({'int': 1000})}),\n",
        "   'minmaxValues': {'int': {'minimum': 0, 'maximum': 97740}}}},\n",
        " {'column': 'Street Code3',\n",
        "  'stats': {'totalValueCount': 1000,\n",
        "   'emptyValueCount': 0,\n",
-       "   'datatypes': Counter({'int': 1000}),\n",
+       "   'datatypes': defaultdict(collections.Counter,\n",
+       "               {'total': Counter({'int': 1000})}),\n",
        "   'minmaxValues': {'int': {'minimum': 0, 'maximum': 98260}}}},\n",
        " {'column': 'Vehicle Expiration Date',\n",
        "  'stats': {'totalValueCount': 1000,\n",
        "   'emptyValueCount': 0,\n",
-       "   'datatypes': Counter({'int': 1000}),\n",
+       "   'datatypes': defaultdict(collections.Counter,\n",
+       "               {'total': Counter({'int': 1000})}),\n",
        "   'minmaxValues': {'int': {'minimum': 0, 'maximum': 88888888}}}},\n",
        " {'column': 'Violation Location',\n",
        "  'stats': {'totalValueCount': 1000,\n",
        "   'emptyValueCount': 72,\n",
-       "   'datatypes': Counter({'int': 928}),\n",
+       "   'datatypes': defaultdict(collections.Counter,\n",
+       "               {'total': Counter({'int': 928})}),\n",
        "   'minmaxValues': {'int': {'minimum': 1, 'maximum': 122}}}},\n",
        " {'column': 'Violation Precinct',\n",
        "  'stats': {'totalValueCount': 1000,\n",
        "   'emptyValueCount': 0,\n",
-       "   'datatypes': Counter({'int': 1000}),\n",
+       "   'datatypes': defaultdict(collections.Counter,\n",
+       "               {'total': Counter({'int': 1000})}),\n",
        "   'minmaxValues': {'int': {'minimum': 0, 'maximum': 122}}}},\n",
        " {'column': 'Issuer Precinct',\n",
        "  'stats': {'totalValueCount': 1000,\n",
        "   'emptyValueCount': 0,\n",
-       "   'datatypes': Counter({'int': 1000}),\n",
+       "   'datatypes': defaultdict(collections.Counter,\n",
+       "               {'total': Counter({'int': 1000})}),\n",
        "   'minmaxValues': {'int': {'minimum': 0, 'maximum': 977}}}},\n",
        " {'column': 'Issuer Code',\n",
        "  'stats': {'totalValueCount': 1000,\n",
        "   'emptyValueCount': 0,\n",
-       "   'datatypes': Counter({'int': 1000}),\n",
+       "   'datatypes': defaultdict(collections.Counter,\n",
+       "               {'total': Counter({'int': 1000})}),\n",
        "   'minmaxValues': {'int': {'minimum': 0, 'maximum': 981230}}}},\n",
        " {'column': 'Issuer Command',\n",
        "  'stats': {'totalValueCount': 1000,\n",
        "   'emptyValueCount': 69,\n",
-       "   'datatypes': Counter({'str': 797, 'int': 134}),\n",
+       "   'datatypes': defaultdict(collections.Counter,\n",
+       "               {'total': Counter({'str': 797, 'int': 134})}),\n",
        "   'minmaxValues': {'str': {'minimum': '0NIC', 'maximum': 'T803'},\n",
        "    'int': {'minimum': 0, 'maximum': 977}}}},\n",
        " {'column': 'Issuer Squad',\n",
        "  'stats': {'totalValueCount': 1000,\n",
        "   'emptyValueCount': 69,\n",
-       "   'datatypes': Counter({'str': 779, 'int': 152}),\n",
+       "   'datatypes': defaultdict(collections.Counter,\n",
+       "               {'total': Counter({'str': 779, 'int': 152})}),\n",
        "   'minmaxValues': {'str': {'minimum': 'A', 'maximum': 'YA'},\n",
        "    'int': {'minimum': 0, 'maximum': 0}}}},\n",
        " {'column': 'Violation Time',\n",
        "  'stats': {'totalValueCount': 1000,\n",
        "   'emptyValueCount': 1,\n",
-       "   'datatypes': Counter({'str': 999}),\n",
+       "   'datatypes': defaultdict(collections.Counter,\n",
+       "               {'total': Counter({'str': 999})}),\n",
        "   'minmaxValues': {'str': {'minimum': '0014A', 'maximum': '1259P'}}}},\n",
        " {'column': 'Time First Observed',\n",
        "  'stats': {'totalValueCount': 1000,\n",
        "   'emptyValueCount': 896,\n",
-       "   'datatypes': Counter({'str': 104}),\n",
+       "   'datatypes': defaultdict(collections.Counter,\n",
+       "               {'total': Counter({'str': 104})}),\n",
        "   'minmaxValues': {'str': {'minimum': '0107P', 'maximum': '1257P'}}}},\n",
        " {'column': 'Violation County',\n",
        "  'stats': {'totalValueCount': 1000,\n",
        "   'emptyValueCount': 72,\n",
-       "   'datatypes': Counter({'str': 928}),\n",
+       "   'datatypes': defaultdict(collections.Counter,\n",
+       "               {'total': Counter({'str': 928})}),\n",
        "   'minmaxValues': {'str': {'minimum': 'BX', 'maximum': 'R'}}}},\n",
        " {'column': 'Violation In Front Of Or Opposite',\n",
        "  'stats': {'totalValueCount': 1000,\n",
        "   'emptyValueCount': 87,\n",
-       "   'datatypes': Counter({'str': 913}),\n",
+       "   'datatypes': defaultdict(collections.Counter,\n",
+       "               {'total': Counter({'str': 913})}),\n",
        "   'minmaxValues': {'str': {'minimum': 'F', 'maximum': 'X'}}}},\n",
        " {'column': 'Number',\n",
        "  'stats': {'totalValueCount': 1000,\n",
        "   'emptyValueCount': 98,\n",
-       "   'datatypes': Counter({'str': 279, 'int': 623}),\n",
+       "   'datatypes': defaultdict(collections.Counter,\n",
+       "               {'total': Counter({'str': 279, 'int': 623})}),\n",
        "   'minmaxValues': {'str': {'minimum': '10-16', 'maximum': 'W'},\n",
        "    'int': {'minimum': 1, 'maximum': 16305}}}},\n",
        " {'column': 'Street',\n",
        "  'stats': {'totalValueCount': 1000,\n",
        "   'emptyValueCount': 1,\n",
-       "   'datatypes': Counter({'str': 999}),\n",
+       "   'datatypes': defaultdict(collections.Counter,\n",
+       "               {'total': Counter({'str': 999})}),\n",
        "   'minmaxValues': {'str': {'minimum': '101st St', 'maximum': 'Wythe Ave'}}}},\n",
        " {'column': 'Intersecting Street',\n",
        "  'stats': {'totalValueCount': 1000,\n",
        "   'emptyValueCount': 798,\n",
-       "   'datatypes': Counter({'str': 202}),\n",
+       "   'datatypes': defaultdict(collections.Counter,\n",
+       "               {'total': Counter({'str': 202})}),\n",
        "   'minmaxValues': {'str': {'minimum': ')@ALLERTON AVE-XA-2',\n",
        "     'maximum': 'Y SVC RD @ 72ND RD'}}}},\n",
        " {'column': 'Date First Observed',\n",
        "  'stats': {'totalValueCount': 1000,\n",
        "   'emptyValueCount': 0,\n",
-       "   'datatypes': Counter({'int': 1000}),\n",
+       "   'datatypes': defaultdict(collections.Counter,\n",
+       "               {'total': Counter({'int': 1000})}),\n",
        "   'minmaxValues': {'int': {'minimum': 0, 'maximum': 20140618}}}},\n",
        " {'column': 'Law Section',\n",
        "  'stats': {'totalValueCount': 1000,\n",
        "   'emptyValueCount': 0,\n",
-       "   'datatypes': Counter({'int': 1000}),\n",
+       "   'datatypes': defaultdict(collections.Counter,\n",
+       "               {'total': Counter({'int': 1000})}),\n",
        "   'minmaxValues': {'int': {'minimum': 408, 'maximum': 1180}}}},\n",
        " {'column': 'Sub Division',\n",
        "  'stats': {'totalValueCount': 1000,\n",
        "   'emptyValueCount': 0,\n",
-       "   'datatypes': Counter({'str': 998, 'int': 2}),\n",
+       "   'datatypes': defaultdict(collections.Counter,\n",
+       "               {'total': Counter({'str': 998, 'int': 2})}),\n",
        "   'minmaxValues': {'str': {'minimum': 'B', 'maximum': 'm5'},\n",
        "    'int': {'minimum': 5, 'maximum': 99}}}},\n",
        " {'column': 'Violation Legal Code',\n",
        "  'stats': {'totalValueCount': 1000,\n",
        "   'emptyValueCount': 930,\n",
-       "   'datatypes': Counter({'str': 69, 'int': 1}),\n",
+       "   'datatypes': defaultdict(collections.Counter,\n",
+       "               {'total': Counter({'str': 69, 'int': 1})}),\n",
        "   'minmaxValues': {'str': {'minimum': 'T', 'maximum': 'T'},\n",
        "    'int': {'minimum': 0, 'maximum': 0}}}},\n",
        " {'column': 'Days Parking In Effect    ',\n",
        "  'stats': {'totalValueCount': 1000,\n",
        "   'emptyValueCount': 155,\n",
-       "   'datatypes': Counter({'str': 845}),\n",
+       "   'datatypes': defaultdict(collections.Counter,\n",
+       "               {'total': Counter({'str': 845})}),\n",
        "   'minmaxValues': {'str': {'minimum': 'BBBBBBB', 'maximum': 'YYYYYYY'}}}},\n",
        " {'column': 'From Hours In Effect',\n",
        "  'stats': {'totalValueCount': 1000,\n",
        "   'emptyValueCount': 366,\n",
-       "   'datatypes': Counter({'str': 634}),\n",
+       "   'datatypes': defaultdict(collections.Counter,\n",
+       "               {'total': Counter({'str': 634})}),\n",
        "   'minmaxValues': {'str': {'minimum': '0  :', 'maximum': 'ALL'}}}},\n",
        " {'column': 'To Hours In Effect',\n",
        "  'stats': {'totalValueCount': 1000,\n",
        "   'emptyValueCount': 366,\n",
-       "   'datatypes': Counter({'str': 634}),\n",
+       "   'datatypes': defaultdict(collections.Counter,\n",
+       "               {'total': Counter({'str': 634})}),\n",
        "   'minmaxValues': {'str': {'minimum': '0  :', 'maximum': 'ALL'}}}},\n",
        " {'column': 'Vehicle Color',\n",
        "  'stats': {'totalValueCount': 1000,\n",
        "   'emptyValueCount': 11,\n",
-       "   'datatypes': Counter({'str': 989}),\n",
+       "   'datatypes': defaultdict(collections.Counter,\n",
+       "               {'total': Counter({'str': 989})}),\n",
        "   'minmaxValues': {'str': {'minimum': 'BK', 'maximum': 'YW'}}}},\n",
        " {'column': 'Unregistered Vehicle?',\n",
        "  'stats': {'totalValueCount': 1000,\n",
        "   'emptyValueCount': 848,\n",
-       "   'datatypes': Counter({'int': 152}),\n",
+       "   'datatypes': defaultdict(collections.Counter,\n",
+       "               {'total': Counter({'int': 152})}),\n",
        "   'minmaxValues': {'int': {'minimum': 0, 'maximum': 0}}}},\n",
        " {'column': 'Vehicle Year',\n",
        "  'stats': {'totalValueCount': 1000,\n",
        "   'emptyValueCount': 0,\n",
-       "   'datatypes': Counter({'int': 1000}),\n",
+       "   'datatypes': defaultdict(collections.Counter,\n",
+       "               {'total': Counter({'int': 1000})}),\n",
        "   'minmaxValues': {'int': {'minimum': 0, 'maximum': 2015}}}},\n",
        " {'column': 'Meter Number',\n",
        "  'stats': {'totalValueCount': 1000,\n",
        "   'emptyValueCount': 751,\n",
-       "   'datatypes': Counter({'str': 249}),\n",
+       "   'datatypes': defaultdict(collections.Counter,\n",
+       "               {'total': Counter({'str': 249})}),\n",
        "   'minmaxValues': {'str': {'minimum': '-', 'maximum': '495-0067'}}}},\n",
        " {'column': 'Feet From Curb',\n",
        "  'stats': {'totalValueCount': 1000,\n",
        "   'emptyValueCount': 0,\n",
-       "   'datatypes': Counter({'int': 1000}),\n",
+       "   'datatypes': defaultdict(collections.Counter,\n",
+       "               {'total': Counter({'int': 1000})}),\n",
        "   'minmaxValues': {'int': {'minimum': 0, 'maximum': 10}}}},\n",
        " {'column': 'Violation Post Code',\n",
        "  'stats': {'totalValueCount': 1000,\n",
        "   'emptyValueCount': 220,\n",
-       "   'datatypes': Counter({'str': 743, 'int': 37}),\n",
+       "   'datatypes': defaultdict(collections.Counter,\n",
+       "               {'total': Counter({'str': 743, 'int': 37})}),\n",
        "   'minmaxValues': {'str': {'minimum': '01 -', 'maximum': 'Y 99'},\n",
        "    'int': {'minimum': 0, 'maximum': 131}}}},\n",
        " {'column': 'Violation Description',\n",
        "  'stats': {'totalValueCount': 1000,\n",
        "   'emptyValueCount': 152,\n",
-       "   'datatypes': Counter({'str': 848}),\n",
+       "   'datatypes': defaultdict(collections.Counter,\n",
+       "               {'total': Counter({'str': 848})}),\n",
        "   'minmaxValues': {'str': {'minimum': '09-Blocking the Box',\n",
        "     'maximum': 'PHTO SCHOOL ZN SPEED VIOLATION'}}}},\n",
        " {'column': 'No Standing or Stopping Violation',\n",
        "  'stats': {'totalValueCount': 1000,\n",
        "   'emptyValueCount': 1000,\n",
-       "   'datatypes': Counter(),\n",
+       "   'datatypes': defaultdict(collections.Counter, {}),\n",
        "   'minmaxValues': {}}},\n",
        " {'column': 'Hydrant Violation',\n",
        "  'stats': {'totalValueCount': 1000,\n",
        "   'emptyValueCount': 1000,\n",
-       "   'datatypes': Counter(),\n",
+       "   'datatypes': defaultdict(collections.Counter, {}),\n",
        "   'minmaxValues': {}}},\n",
        " {'column': 'Double Parking Violation',\n",
        "  'stats': {'totalValueCount': 1000,\n",
        "   'emptyValueCount': 1000,\n",
-       "   'datatypes': Counter(),\n",
+       "   'datatypes': defaultdict(collections.Counter, {}),\n",
        "   'minmaxValues': {}}}]"
       ]
      },
@@ -362,7 +402,7 @@
    "source": [
     "# Profile a sample of 1000 rows using the default profiler.\n",
     "\n",
-    "profiles = ds.sample(size=1000, seed=42).profile()\n",
+    "profiles = ds.sample(n=1000, random_state=42).profile()\n",
     "profiles"
    ]
   },
@@ -935,11 +975,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('63272JM', 'NY') = [BWN: 1, BROWN: 1]\n",
+      "('63272JM', 'NY') = [BROWN: 1, BWN: 1]\n",
       "('99308MC', 'NY') = [WHITE: 1, WH: 1]\n",
       "('DNB3070', 'NY') = [BLK: 1, BLACK: 1]\n",
       "('95743JM', 'NY') = [BL: 1, BLUE: 1]\n",
-      "('63677JM', 'NY') = [BROWN: 1, BRN: 1]\n",
+      "('63677JM', 'NY') = [BRN: 1, BROWN: 1]\n",
       "('87071JS', 'NY') = [WHITE: 1, WH: 1]\n"
      ]
     }
