--- a/examples/notebooks/parking-violations/Parking Violations - Token Signature Outliers for Street Names.ipynb
+++ b/examples/notebooks/parking-violations/Parking Violations - Token Signature Outliers for Street Names.ipynb
@@ -24,11 +24,16 @@
     "\n",
     "datafile = './jt7v-77mi.tsv.gz'\n",
     "\n",
-    "with gzip.open(datafile, 'wb') as f:\n",
-    "    ds = Socrata().dataset('jt7v-77mi')\n",
-    "    ds.write(f)\n",
+    "# Download file only if it does not exist already.\n",
+    "if not os.path.isfile(datafile):\n",
+    "    with gzip.open(datafile, 'wb') as f:\n",
+    "        ds = Socrata().dataset('jt7v-77mi')\n",
+    "        print('Downloading ...\\n')\n",
+    "        print(ds.name + '\\n')\n",
+    "        print(ds.description)\n",
+    "        ds.write(f)\n",
     "\n",
-    "\n",
+    "        \n",
     "# As an alternative, you can also use the smaller dataset sample that is\n",
     "# included in the repository.\n",
     "#\n",
@@ -120,212 +125,212 @@
     {
      "data": {
       "text/plain": [
-       "[{'hllw', 'hollow', 'hollows', 'holw', 'holws'},\n",
-       " {'ramp'},\n",
-       " {'wall'},\n",
-       " {'clfs', 'cliffs'},\n",
-       " {'plaza', 'plz', 'plza'},\n",
-       " {'gardens', 'gdns', 'grdns'},\n",
-       " {'bch', 'beach'},\n",
-       " {'lake', 'lk'},\n",
-       " {'shoars', 'shores', 'shrs'},\n",
-       " {'unions', 'uns'},\n",
-       " {'ranch', 'ranches', 'rnch', 'rnchs'},\n",
-       " {'glens', 'glns'},\n",
-       " {'div', 'divide', 'dv', 'dvd'},\n",
-       " {'haven', 'hvn'},\n",
-       " {'sq', 'sqr', 'sqre', 'squ', 'square'},\n",
-       " {'rd', 'road'},\n",
-       " {'pr', 'prairie', 'prr'},\n",
-       " {'brdge', 'brg', 'bridge'},\n",
-       " {'exp', 'expr', 'express', 'expressway', 'expw', 'expy'},\n",
-       " {'isle', 'isles'},\n",
-       " {'forges', 'frgs'},\n",
-       " {'skwy', 'skyway'},\n",
-       " {'bgs', 'burgs'},\n",
-       " {'point', 'pt'},\n",
-       " {'glen', 'gln'},\n",
-       " {'park', 'parks'},\n",
-       " {'ldg', 'ldge', 'lodg', 'lodge'},\n",
-       " {'groves', 'grvs'},\n",
-       " {'knls', 'knolls'},\n",
-       " {'cen', 'cent', 'center', 'centr', 'centre', 'cnter', 'cntr', 'ctr'},\n",
-       " {'route', 'rte'},\n",
-       " {'manor', 'mnr'},\n",
-       " {'spgs', 'spngs', 'springs', 'sprngs'},\n",
-       " {'courts', 'cts'},\n",
-       " {'stream', 'streme', 'strm'},\n",
-       " {'smt', 'sumit', 'sumitt', 'summit'},\n",
-       " {'flat', 'flt'},\n",
-       " {'pike', 'pikes'},\n",
-       " {'cir', 'circ', 'circl', 'circle', 'crcl', 'crcle'},\n",
-       " {'est', 'estate'},\n",
-       " {'byp', 'bypa', 'bypas', 'bypass', 'byps'},\n",
-       " {'shoar', 'shore', 'shr'},\n",
-       " {'streets', 'sts'},\n",
-       " {'lcks', 'locks'},\n",
-       " {'shls', 'shoals'},\n",
-       " {'spg', 'spng', 'spring', 'sprng'},\n",
-       " {'anex', 'annex', 'annx', 'anx'},\n",
-       " {'corners', 'cors'},\n",
-       " {'ter', 'terr', 'terrace'},\n",
-       " {'brks', 'brooks'},\n",
-       " {'fall'},\n",
-       " {'key', 'ky'},\n",
-       " {'points', 'pts'},\n",
-       " {'shl', 'shoal'},\n",
-       " {'ford', 'frd'},\n",
-       " {'drives', 'drs'},\n",
-       " {'bg', 'burg'},\n",
-       " {'mntns', 'mountains', 'mtns'},\n",
-       " {'path', 'paths'},\n",
-       " {'rds', 'roads'},\n",
-       " {'centers', 'ctrs'},\n",
-       " {'ext', 'extension', 'extn', 'extnsn'},\n",
-       " {'lgt', 'light'},\n",
-       " {'fort', 'frt', 'ft'},\n",
-       " {'pass'},\n",
-       " {'valley', 'vally', 'vlly', 'vly'},\n",
-       " {'ferry', 'frry', 'fry'},\n",
-       " {'coves', 'cvs'},\n",
-       " {'plains', 'plns'},\n",
-       " {'un', 'union'},\n",
+       "[{'shl', 'shoal'},\n",
        " {'tunel', 'tunl', 'tunls', 'tunnel', 'tunnels', 'tunnl'},\n",
        " {'rest', 'rst'},\n",
-       " {'canyn', 'canyon', 'cnyn', 'cyn'},\n",
-       " {'grov', 'grove', 'grv'},\n",
-       " {'underpass', 'upas'},\n",
-       " {'clf', 'cliff'},\n",
-       " {'st', 'str', 'street', 'strt'},\n",
-       " {'riv', 'river', 'rivr', 'rvr'},\n",
-       " {'motorway', 'mtwy'},\n",
-       " {'passage', 'psge'},\n",
-       " {'hill', 'hl'},\n",
-       " {'causeway', 'causwa', 'cswy'},\n",
-       " {'freeway', 'freewy', 'frway', 'frwy', 'fwy'},\n",
-       " {'greens', 'grns'},\n",
-       " {'knl', 'knol', 'knoll'},\n",
-       " {'cor', 'corner'},\n",
-       " {'mntain', 'mntn', 'mountain', 'mountin', 'mtin', 'mtn'},\n",
-       " {'brk', 'brook'},\n",
-       " {'arc', 'arcade'},\n",
-       " {'extensions', 'exts'},\n",
-       " {'fork', 'frk'},\n",
-       " {'bot', 'bottm', 'bottom', 'btm'},\n",
-       " {'circles', 'cirs'},\n",
-       " {'walk', 'walks'},\n",
-       " {'hills', 'hls'},\n",
-       " {'mall'},\n",
-       " {'row'},\n",
-       " {'sqrs', 'sqs', 'squares'},\n",
-       " {'garden', 'gardn', 'gdn', 'grden', 'grdn'},\n",
-       " {'port', 'prt'},\n",
-       " {'is', 'island', 'islnd'},\n",
-       " {'stra', 'strav', 'straven', 'stravenue', 'stravn', 'strvn', 'strvnue'},\n",
-       " {'crossing', 'crssng', 'xing'},\n",
-       " {'throughway', 'trwy'},\n",
-       " {'harb', 'harbor', 'harbr', 'hbr', 'hrbor'},\n",
-       " {'landing', 'lndg', 'lndng'},\n",
-       " {'spur', 'spurs'},\n",
-       " {'rue'},\n",
-       " {'parkways', 'pkwy', 'pkwys'},\n",
-       " {'wells', 'wls'},\n",
-       " {'forg', 'forge', 'frg'},\n",
-       " {'bend', 'bnd'},\n",
-       " {'bayoo', 'bayou', 'byu'},\n",
-       " {'court', 'ct'},\n",
-       " {'villages', 'vlgs'},\n",
-       " {'creek', 'crk'},\n",
-       " {'vdct', 'via', 'viadct', 'viaduct'},\n",
-       " {'rdg', 'rdge', 'ridge'},\n",
-       " {'cape', 'cpe'},\n",
-       " {'mill', 'ml'},\n",
-       " {'ville', 'vl'},\n",
-       " {'cove', 'cv'},\n",
-       " {'rad', 'radial', 'radiel', 'radl'},\n",
-       " {'estates', 'ests'},\n",
-       " {'track', 'tracks', 'trak', 'trk', 'trks'},\n",
-       " {'field', 'fld'},\n",
-       " {'lane', 'ln'},\n",
-       " {'fields', 'flds'},\n",
-       " {'course', 'crse'},\n",
-       " {'forest', 'forests', 'frst'},\n",
-       " {'gateway', 'gatewy', 'gatway', 'gtway', 'gtwy'},\n",
-       " {'manors', 'mnrs'},\n",
-       " {'mills', 'mls'},\n",
-       " {'fords', 'frds'},\n",
-       " {'tpke', 'trnpk', 'turnpike', 'turnpk'},\n",
-       " {'mnt', 'mount', 'mt'},\n",
-       " {'spur'},\n",
-       " {'cmns', 'commons'},\n",
-       " {'mdw', 'mdws', 'meadows', 'medows'},\n",
-       " {'blvd', 'boul', 'boulevard', 'boulv'},\n",
-       " {'loop', 'loops'},\n",
-       " {'mdw', 'meadow'},\n",
-       " {'heights', 'ht', 'hts'},\n",
-       " {'cmn', 'common'},\n",
-       " {'pines', 'pnes'},\n",
-       " {'vis', 'vist', 'vista', 'vst', 'vsta'},\n",
-       " {'oval', 'ovl'},\n",
-       " {'trace', 'traces', 'trce'},\n",
-       " {'forks', 'frks'},\n",
-       " {'park', 'prk'},\n",
-       " {'islands', 'islnds', 'iss'},\n",
-       " {'land'},\n",
-       " {'green', 'grn'},\n",
-       " {'ways'},\n",
-       " {'trailer', 'trlr', 'trlrs'},\n",
-       " {'br', 'branch', 'brnch'},\n",
-       " {'allee', 'alley', 'ally', 'aly'},\n",
-       " {'valleys', 'vlys'},\n",
-       " {'blfs', 'bluffs'},\n",
-       " {'orch', 'orchard', 'orchrd'},\n",
-       " {'opas', 'overpass'},\n",
-       " {'pine', 'pne'},\n",
        " {'ports', 'prts'},\n",
-       " {'keys', 'kys'},\n",
-       " {'way', 'wy'},\n",
-       " {'mission', 'missn', 'msn', 'mssn'},\n",
-       " {'crossroads', 'xrds'},\n",
-       " {'inlet', 'inlt'},\n",
-       " {'jctns', 'jcts', 'junctions'},\n",
-       " {'blf', 'bluf', 'bluff'},\n",
-       " {'dam', 'dm'},\n",
-       " {'trafficway', 'trfy'},\n",
-       " {'walk'},\n",
-       " {'clb', 'club'},\n",
-       " {'lgts', 'lights'},\n",
-       " {'rdgs', 'ridges'},\n",
-       " {'parkway', 'parkwy', 'pkway', 'pkwy', 'pky'},\n",
-       " {'nck', 'neck'},\n",
-       " {'views', 'vws'},\n",
-       " {'curv', 'curve'},\n",
-       " {'rapid', 'rpd'},\n",
-       " {'trail', 'trails', 'trl', 'trls'},\n",
-       " {'cres', 'crescent', 'crsent', 'crsnt'},\n",
-       " {'crossroad', 'xrd'},\n",
-       " {'pl', 'place'},\n",
-       " {'mews'},\n",
-       " {'plain', 'pln'},\n",
-       " {'well', 'wl'},\n",
-       " {'falls', 'fls'},\n",
-       " {'sta', 'station', 'statn', 'stn'},\n",
-       " {'vill', 'villag', 'village', 'villg', 'villiage', 'vlg'},\n",
-       " {'crest', 'crst'},\n",
-       " {'rapids', 'rpds'},\n",
-       " {'av', 'ave', 'aven', 'avenu', 'avenue', 'avn', 'avnue'},\n",
-       " {'jct', 'jction', 'jctn', 'junction', 'junctn', 'juncton'},\n",
-       " {'lck', 'lock'},\n",
-       " {'dr', 'driv', 'drive', 'drv'},\n",
-       " {'view', 'vw'},\n",
-       " {'harbors', 'hbrs'},\n",
-       " {'highway', 'highwy', 'hiway', 'hiwy', 'hway', 'hwy'},\n",
-       " {'lakes', 'lks'},\n",
-       " {'camp', 'cmp', 'cp'},\n",
-       " {'flats', 'flts'},\n",
-       " {'dale', 'dl'},\n",
+       " {'extensions', 'exts'},\n",
+       " {'run'},\n",
+       " {'clfs', 'cliffs'},\n",
+       " {'est', 'estate'},\n",
+       " {'pine', 'pne'},\n",
+       " {'courts', 'cts'},\n",
+       " {'cen', 'cent', 'center', 'centr', 'centre', 'cnter', 'cntr', 'ctr'},\n",
+       " {'heights', 'ht', 'hts'},\n",
        " {'lf', 'loaf'},\n",
-       " {'run'}]"
+       " {'vill', 'villag', 'village', 'villg', 'villiage', 'vlg'},\n",
+       " {'ter', 'terr', 'terrace'},\n",
+       " {'vis', 'vist', 'vista', 'vst', 'vsta'},\n",
+       " {'motorway', 'mtwy'},\n",
+       " {'view', 'vw'},\n",
+       " {'keys', 'kys'},\n",
+       " {'key', 'ky'},\n",
+       " {'shoar', 'shore', 'shr'},\n",
+       " {'crest', 'crst'},\n",
+       " {'plaza', 'plz', 'plza'},\n",
+       " {'creek', 'crk'},\n",
+       " {'hill', 'hl'},\n",
+       " {'stra', 'strav', 'straven', 'stravenue', 'stravn', 'strvn', 'strvnue'},\n",
+       " {'anex', 'annex', 'annx', 'anx'},\n",
+       " {'rdg', 'rdge', 'ridge'},\n",
+       " {'manors', 'mnrs'},\n",
+       " {'drives', 'drs'},\n",
+       " {'jctns', 'jcts', 'junctions'},\n",
+       " {'forks', 'frks'},\n",
+       " {'villages', 'vlgs'},\n",
+       " {'lake', 'lk'},\n",
+       " {'brks', 'brooks'},\n",
+       " {'knls', 'knolls'},\n",
+       " {'smt', 'sumit', 'sumitt', 'summit'},\n",
+       " {'brdge', 'brg', 'bridge'},\n",
+       " {'hills', 'hls'},\n",
+       " {'riv', 'river', 'rivr', 'rvr'},\n",
+       " {'av', 'ave', 'aven', 'avenu', 'avenue', 'avn', 'avnue'},\n",
+       " {'ranch', 'ranches', 'rnch', 'rnchs'},\n",
+       " {'rapid', 'rpd'},\n",
+       " {'vdct', 'via', 'viadct', 'viaduct'},\n",
+       " {'course', 'crse'},\n",
+       " {'curv', 'curve'},\n",
+       " {'grov', 'grove', 'grv'},\n",
+       " {'points', 'pts'},\n",
+       " {'cir', 'circ', 'circl', 'circle', 'crcl', 'crcle'},\n",
+       " {'crossing', 'crssng', 'xing'},\n",
+       " {'blf', 'bluf', 'bluff'},\n",
+       " {'blfs', 'bluffs'},\n",
+       " {'mnt', 'mount', 'mt'},\n",
+       " {'rad', 'radial', 'radiel', 'radl'},\n",
+       " {'field', 'fld'},\n",
+       " {'shoars', 'shores', 'shrs'},\n",
+       " {'parkway', 'parkwy', 'pkway', 'pkwy', 'pky'},\n",
+       " {'valley', 'vally', 'vlly', 'vly'},\n",
+       " {'forg', 'forge', 'frg'},\n",
+       " {'camp', 'cmp', 'cp'},\n",
+       " {'loop', 'loops'},\n",
+       " {'exp', 'expr', 'express', 'expressway', 'expw', 'expy'},\n",
+       " {'is', 'island', 'islnd'},\n",
+       " {'track', 'tracks', 'trak', 'trk', 'trks'},\n",
+       " {'unions', 'uns'},\n",
+       " {'ldg', 'ldge', 'lodg', 'lodge'},\n",
+       " {'manor', 'mnr'},\n",
+       " {'forges', 'frgs'},\n",
+       " {'haven', 'hvn'},\n",
+       " {'mntain', 'mntn', 'mountain', 'mountin', 'mtin', 'mtn'},\n",
+       " {'blvd', 'boul', 'boulevard', 'boulv'},\n",
+       " {'lane', 'ln'},\n",
+       " {'bend', 'bnd'},\n",
+       " {'mdw', 'mdws', 'meadows', 'medows'},\n",
+       " {'wells', 'wls'},\n",
+       " {'underpass', 'upas'},\n",
+       " {'rue'},\n",
+       " {'coves', 'cvs'},\n",
+       " {'cres', 'crescent', 'crsent', 'crsnt'},\n",
+       " {'trafficway', 'trfy'},\n",
+       " {'valleys', 'vlys'},\n",
+       " {'row'},\n",
+       " {'mews'},\n",
+       " {'clf', 'cliff'},\n",
+       " {'rds', 'roads'},\n",
+       " {'stream', 'streme', 'strm'},\n",
+       " {'groves', 'grvs'},\n",
+       " {'mill', 'ml'},\n",
+       " {'crossroad', 'xrd'},\n",
+       " {'corners', 'cors'},\n",
+       " {'lakes', 'lks'},\n",
+       " {'nck', 'neck'},\n",
+       " {'streets', 'sts'},\n",
+       " {'wall'},\n",
+       " {'orch', 'orchard', 'orchrd'},\n",
+       " {'knl', 'knol', 'knoll'},\n",
+       " {'spur'},\n",
+       " {'sq', 'sqr', 'sqre', 'squ', 'square'},\n",
+       " {'allee', 'alley', 'ally', 'aly'},\n",
+       " {'glens', 'glns'},\n",
+       " {'ville', 'vl'},\n",
+       " {'st', 'str', 'street', 'strt'},\n",
+       " {'bgs', 'burgs'},\n",
+       " {'court', 'ct'},\n",
+       " {'trailer', 'trlr', 'trlrs'},\n",
+       " {'mall'},\n",
+       " {'fall'},\n",
+       " {'mntns', 'mountains', 'mtns'},\n",
+       " {'fort', 'frt', 'ft'},\n",
+       " {'cape', 'cpe'},\n",
+       " {'ext', 'extension', 'extn', 'extnsn'},\n",
+       " {'lgt', 'light'},\n",
+       " {'well', 'wl'},\n",
+       " {'harb', 'harbor', 'harbr', 'hbr', 'hrbor'},\n",
+       " {'hllw', 'hollow', 'hollows', 'holw', 'holws'},\n",
+       " {'centers', 'ctrs'},\n",
+       " {'bch', 'beach'},\n",
+       " {'pr', 'prairie', 'prr'},\n",
+       " {'cor', 'corner'},\n",
+       " {'un', 'union'},\n",
+       " {'pass'},\n",
+       " {'dr', 'driv', 'drive', 'drv'},\n",
+       " {'point', 'pt'},\n",
+       " {'pike', 'pikes'},\n",
+       " {'walk', 'walks'},\n",
+       " {'brk', 'brook'},\n",
+       " {'mdw', 'meadow'},\n",
+       " {'causeway', 'causwa', 'cswy'},\n",
+       " {'sta', 'station', 'statn', 'stn'},\n",
+       " {'lck', 'lock'},\n",
+       " {'canyn', 'canyon', 'cnyn', 'cyn'},\n",
+       " {'div', 'divide', 'dv', 'dvd'},\n",
+       " {'port', 'prt'},\n",
+       " {'harbors', 'hbrs'},\n",
+       " {'forest', 'forests', 'frst'},\n",
+       " {'views', 'vws'},\n",
+       " {'jct', 'jction', 'jctn', 'junction', 'junctn', 'juncton'},\n",
+       " {'park', 'prk'},\n",
+       " {'freeway', 'freewy', 'frway', 'frwy', 'fwy'},\n",
+       " {'dam', 'dm'},\n",
+       " {'cmn', 'common'},\n",
+       " {'parkways', 'pkwy', 'pkwys'},\n",
+       " {'byp', 'bypa', 'bypas', 'bypass', 'byps'},\n",
+       " {'fork', 'frk'},\n",
+       " {'trail', 'trails', 'trl', 'trls'},\n",
+       " {'skwy', 'skyway'},\n",
+       " {'bayoo', 'bayou', 'byu'},\n",
+       " {'arc', 'arcade'},\n",
+       " {'cove', 'cv'},\n",
+       " {'shls', 'shoals'},\n",
+       " {'passage', 'psge'},\n",
+       " {'throughway', 'trwy'},\n",
+       " {'oval', 'ovl'},\n",
+       " {'plain', 'pln'},\n",
+       " {'walk'},\n",
+       " {'land'},\n",
+       " {'flats', 'flts'},\n",
+       " {'estates', 'ests'},\n",
+       " {'pl', 'place'},\n",
+       " {'bg', 'burg'},\n",
+       " {'highway', 'highwy', 'hiway', 'hiwy', 'hway', 'hwy'},\n",
+       " {'rd', 'road'},\n",
+       " {'plains', 'plns'},\n",
+       " {'trace', 'traces', 'trce'},\n",
+       " {'park', 'parks'},\n",
+       " {'glen', 'gln'},\n",
+       " {'green', 'grn'},\n",
+       " {'inlet', 'inlt'},\n",
+       " {'spur', 'spurs'},\n",
+       " {'ferry', 'frry', 'fry'},\n",
+       " {'pines', 'pnes'},\n",
+       " {'garden', 'gardn', 'gdn', 'grden', 'grdn'},\n",
+       " {'clb', 'club'},\n",
+       " {'islands', 'islnds', 'iss'},\n",
+       " {'route', 'rte'},\n",
+       " {'rdgs', 'ridges'},\n",
+       " {'falls', 'fls'},\n",
+       " {'spg', 'spng', 'spring', 'sprng'},\n",
+       " {'gardens', 'gdns', 'grdns'},\n",
+       " {'isle', 'isles'},\n",
+       " {'landing', 'lndg', 'lndng'},\n",
+       " {'cmns', 'commons'},\n",
+       " {'spgs', 'spngs', 'springs', 'sprngs'},\n",
+       " {'mission', 'missn', 'msn', 'mssn'},\n",
+       " {'circles', 'cirs'},\n",
+       " {'fields', 'flds'},\n",
+       " {'ramp'},\n",
+       " {'lcks', 'locks'},\n",
+       " {'path', 'paths'},\n",
+       " {'crossroads', 'xrds'},\n",
+       " {'bot', 'bottm', 'bottom', 'btm'},\n",
+       " {'way', 'wy'},\n",
+       " {'greens', 'grns'},\n",
+       " {'ways'},\n",
+       " {'fords', 'frds'},\n",
+       " {'br', 'branch', 'brnch'},\n",
+       " {'dale', 'dl'},\n",
+       " {'lgts', 'lights'},\n",
+       " {'mills', 'mls'},\n",
+       " {'flat', 'flt'},\n",
+       " {'sqrs', 'sqs', 'squares'},\n",
+       " {'rapids', 'rpds'},\n",
+       " {'opas', 'overpass'},\n",
+       " {'gateway', 'gatewy', 'gatway', 'gtway', 'gtwy'},\n",
+       " {'tpke', 'trnpk', 'turnpike', 'turnpk'},\n",
+       " {'ford', 'frd'}]"
       ]
      },
      "execution_count": 6,
