--- a/examples/notebooks/Masterdata.ipynb
+++ b/examples/notebooks/Masterdata.ipynb
@@ -35,7 +35,7 @@
    "source": [
     "# Import the amasterdata and reference data modules.\n",
     "\n",
-    "import openclean.data.archive as masterdata\n",
+    "import openclean.data.archive.base as masterdata\n",
     "import openclean.data.refdata as refdata"
    ]
   },
@@ -48,10 +48,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Company Suffixes (company_suffixes)\n",
       "Cities in the U.S. (encyclopaedia_britannica:us_cities)\n",
+      "NYC Finance - State Codes (nyc.gov:dof:state_codes)\n",
       "REST Countries (restcountries.eu)\n",
       "C1 Street Suffix Abbreviations (usps:street_abbrev)\n",
-      "C2 Secondary Unit Designators (usps:secondary_unit_designators)\n"
+      "C2 Secondary Unit Designators (usps:secondary_unit_designators)\n",
+      "States and territories of the U.S. (wikipedia:us_states)\n"
      ]
     }
    ],
@@ -191,23 +194,11 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Snapshot (version=0 description='' at=2021-02-26 11:07:34.902079-05:00)>"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create a local masterdata archive for the countries dataset.\n",
     "\n",
-    "archive = masterdata.create('restcountries', primary_key=['alpha3Code'], replace=True)\n",
-    "archive.commit(countries)"
+    "archive = masterdata.create('restcountries', source=countries, primary_key=['alpha3Code'], replace=True)"
    ]
   },
   {
@@ -387,7 +378,7 @@
     {
      "data": {
       "text/plain": [
-       "<Snapshot (version=1 description='' at=2021-02-26 11:07:35.063135-05:00)>"
+       "<Snapshot (version=1 description='' at=2021-04-21 07:24:23.441467-04:00)>"
       ]
      },
      "execution_count": 10,
@@ -475,8 +466,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<Snapshot (version=0 description='' at=2021-02-26 11:07:34.902079-05:00)>\n",
-      "<Snapshot (version=1 description='' at=2021-02-26 11:07:35.063135-05:00)>\n"
+      "<Snapshot (version=0 description='' at=2021-04-21 07:24:23.308028-04:00)>\n",
+      "<Snapshot (version=1 description='' at=2021-04-21 07:24:23.441467-04:00)>\n"
      ]
     }
    ],
